--- a/src/Components/VideoItem.css
+++ b/src/Components/VideoItem.css
@@ -2,6 +2,7 @@
   display: flex !important;
   align-items: center !important;
   cursor: pointer;
+  padding-bottom: 10px;
 }
 .video-item.item img {
   max-width: 180px;
